--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,10 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.7"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "slugify": "^1.6.6"
   }
 }
