--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.4.3",
+    "@tanstack/react-table": "^8.10.7",
     "axios": "^1.5.1",
     "formik": "^2.4.5",
     "phosphor-react": "^1.4.1",
