--- a/web/.env
+++ b/web/.env
@@ -1,1 +1,3 @@
 VITE_SERVER_URL="http://localhost:3001"
+VITE_SERVER_BEARER="Furniture"
+VITE_SERVER_PUBLIC_IMAGES="http://localhost:3001/api/v1/public/images/"
