--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,9 @@
     "formik": "^2.4.5",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
     "yup": "^1.3.2"
