--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.4.3",
     "@tanstack/react-table": "^8.10.7",
     "axios": "^1.5.1",
+    "dompurify": "^3.0.6",
     "formik": "^2.4.5",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
+    "trunc-html": "^1.1.2",
     "yup": "^1.3.2"
   },
   "devDependencies": {
