--- a/web/package.json
+++ b/web/package.json
@@ -20,8 +20,10 @@
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
+    "swiper": "^11.0.4",
     "trunc-html": "^1.1.2",
     "yup": "^1.3.2"
   },
