--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.4.3",
     "@tanstack/react-table": "^8.10.7",
     "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
     "dompurify": "^3.0.6",
     "formik": "^2.4.5",
     "phosphor-react": "^1.4.1",
