--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "@tanstack/react-query": "^5.4.3",
     "@tanstack/react-table": "^8.10.7",
     "axios": "^1.5.1",
@@ -24,6 +25,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
+    "slugify": "^1.6.6",
     "swiper": "^11.0.4",
     "trunc-html": "^1.1.2",
     "yup": "^1.3.2"
